Planning for further generalisations

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 163,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "using Statistics;               # Let's get this fucking bread \n",
     "using DataFrames;               # For succinct data manipulation\n",
     "using CSV;                      # For writing the data to prevent constant re-running\n",
-    "using ForwardDiff, ReverseDiff; # For profiling the gradients \n",
+    "using ForwardDiff;              # For profiling the gradients \n",
     "using Gadfly, Fontconfig, Cairo;# For plotting"
    ]
   },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "select_gradient_solver"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,46 +143,13 @@
     "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
     "        return -0.5 * χ²\n",
     "    end\n",
-    "    return ForwardDiff.gradient(loss_function, parameters)\n",
+    "    return ForwardDiff.gradient(loss_function, parameters);\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "r_gradient_solver"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Here I am going to do the reverse diff. Maybe I could incorporate this as a feature of the profile dif function that I already have?\n",
-    "\"\"\"\n",
-    "function r_gradient_solver(solver, ∇::Function, u0::Vector{Float64}, parameters)\n",
-    "    function loss_function(params)  \n",
-    "        local solution = run_solver(solver, ∇, u0, params); #! Naming\n",
-    "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
-    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
-    "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
-    "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
-    "        return -0.5 * χ²\n",
-    "    end\n",
-    "    return ReverseDiff.gradient(loss_function, parameters)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +158,7 @@
        "speed_vs_accuracy_plot"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,18 +226,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"solver_profiles.csv\""
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch(\"tried to assign 6×6 array to 1×6 destination\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"tried to assign 6×6 array to 1×6 destination\")",
+      "",
+      "Stacktrace:",
+      "  [1] throw_setindex_mismatch(X::Matrix{Float64}, I::Tuple{Int64, Int64})",
+      "    @ Base ./indices.jl:193",
+      "  [2] setindex_shape_check",
+      "    @ ./indices.jl:253 [inlined]",
+      "  [3] _unsafe_setindex!(::IndexLinear, ::Matrix{Float64}, ::Matrix{Float64}, ::Int64, ::UnitRange{Int64})",
+      "    @ Base ./multidimensional.jl:896",
+      "  [4] _setindex!",
+      "    @ ./multidimensional.jl:887 [inlined]",
+      "  [5] setindex!",
+      "    @ ./abstractarray.jl:1267 [inlined]",
+      "  [6] profile(solvers::Vector{Type}, f::typeof(select_gradient_solver), ∇::Function, u0::Vector{Float64}, parameters::Vector{Float64}, len::Int64)",
+      "    @ Main ./In[129]:19",
+      "  [7] main()",
+      "    @ Main ./In[169]:24",
+      "  [8] top-level scope",
+      "    @ In[169]:42",
+      "  [9] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1116"
+     ]
     }
    ],
    "source": [
@@ -295,66 +282,30 @@
     "    burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
     "    burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
     "\n",
-    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5,      TanYam7, Vern6];\n",
-    "        \n",
-    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    # rgrads = profile(solvers, r_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
+    "\n",
+    "    #! so the hessian retruns a 6 by 6 array meaning that I get a dimension mismathch. \n",
+    "    # I need to somehow further generalise the profile function without breaking it on existing cases and without adding more argument passes. Perhaps a structure is what I need here. That way I can defined the shape of the arrays and whatnot be setting elements of the profile structure. This could work quite nicely actually.\n",
     "    \n",
-    "    # CSV.write(\"rgrad_profiles.csv\", rgrads);    # writing the data to a csv\n",
-    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "    hessians = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);\n",
+    "    CSV.write(\"hessian_profiles.csv\", hessians);\n",
+    "    hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
+    "    draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
+    "\n",
+    "    # fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    # solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    \n",
+    "    # CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "    # CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "\n",
+    "    # fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
+    "    # solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
+    "\n",
+    "    # draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
+    "    # draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);\n",
     "end\n",
     "\n",
     "main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "DomainError with -23.182918673775426:\nNaN result for non-NaN input.",
-     "output_type": "error",
-     "traceback": [
-      "DomainError with -23.182918673775426:\nNaN result for non-NaN input.",
-      "",
-      "Stacktrace:",
-      "  [1] nan_dom_err",
-      "    @ ./math.jl:429 [inlined]",
-      "  [2] log10(x::Float64)",
-      "    @ Base.Math ./math.jl:575",
-      "  [3] apply_scale(::Gadfly.Scale.ContinuousScale, ::Vector{Gadfly.Aesthetics}, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
-      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:217",
-      "  [4] apply_scales(::IterTools.Distinct{Base.ValueIterator{Dict{Symbol, Gadfly.ScaleElement}}, Gadfly.ScaleElement}, ::Vector{Gadfly.Aesthetics}, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
-      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:24",
-      "  [5] apply_scales(::IterTools.Distinct{Base.ValueIterator{Dict{Symbol, Gadfly.ScaleElement}}, Gadfly.ScaleElement}, ::Gadfly.Data, ::Gadfly.Data, ::Vararg{Gadfly.Data, N} where N)",
-      "    @ Gadfly.Scale ~/.julia/packages/Gadfly/B5yQc/src/scale.jl:34",
-      "  [6] render_prepare(plot::Plot)",
-      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:641",
-      "  [7] render(plot::Plot)",
-      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:736",
-      "  [8] draw(backend::Compose.Image{Compose.PDFBackend}, p::Plot)",
-      "    @ Gadfly ~/.julia/packages/Gadfly/B5yQc/src/Gadfly.jl:843",
-      "  [9] top-level scope",
-      "    @ In[156]:6",
-      " [10] eval",
-      "    @ ./boot.jl:360 [inlined]",
-      " [11] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "    @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
-   "source": [
-    "# rgrad_plot = speed_vs_accuracy_plot(\"rgrad_profiles.csv\");      # Plot objects\n",
-    "fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
-    "solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
-    "\n",
-    "# draw(PDF(\"reverse_mode_gradient.pdf\", 10cm, 10cm), rgrad_plot);\n",
-    "draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
-    "draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);"
    ]
   }
  ],
