Updating and syncing changes

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -226,40 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"tried to assign 6×6 array to 1×6 destination\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"tried to assign 6×6 array to 1×6 destination\")",
-      "",
-      "Stacktrace:",
-      "  [1] throw_setindex_mismatch(X::Matrix{Float64}, I::Tuple{Int64, Int64})",
-      "    @ Base ./indices.jl:193",
-      "  [2] setindex_shape_check",
-      "    @ ./indices.jl:253 [inlined]",
-      "  [3] _unsafe_setindex!(::IndexLinear, ::Matrix{Float64}, ::Matrix{Float64}, ::Int64, ::UnitRange{Int64})",
-      "    @ Base ./multidimensional.jl:896",
-      "  [4] _setindex!",
-      "    @ ./multidimensional.jl:887 [inlined]",
-      "  [5] setindex!",
-      "    @ ./abstractarray.jl:1267 [inlined]",
-      "  [6] profile(solvers::Vector{Type}, f::typeof(select_gradient_solver), ∇::Function, u0::Vector{Float64}, parameters::Vector{Float64}, len::Int64)",
-      "    @ Main ./In[129]:19",
-      "  [7] main()",
-      "    @ Main ./In[169]:24",
-      "  [8] top-level scope",
-      "    @ In[169]:42",
-      "  [9] eval",
-      "    @ ./boot.jl:360 [inlined]",
-      " [10] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "    @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "function main()\n",
     "    TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
@@ -287,22 +256,22 @@
     "    #! so the hessian retruns a 6 by 6 array meaning that I get a dimension mismathch. \n",
     "    # I need to somehow further generalise the profile function without breaking it on existing cases and without adding more argument passes. Perhaps a structure is what I need here. That way I can defined the shape of the arrays and whatnot be setting elements of the profile structure. This could work quite nicely actually.\n",
     "    \n",
-    "    hessians = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);\n",
-    "    CSV.write(\"hessian_profiles.csv\", hessians);\n",
-    "    hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
-    "    draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
+    "    # hessians = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);\n",
+    "    # CSV.write(\"hessian_profiles.csv\", hessians);\n",
+    "    # hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
+    "    # draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
     "\n",
-    "    # fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    # solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
     "    \n",
-    "    # CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "    # CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
     "\n",
-    "    # fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
-    "    # solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
+    "    fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
+    "    solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
     "\n",
-    "    # draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
-    "    # draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);\n",
+    "    draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
+    "    draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);\n",
     "end\n",
     "\n",
     "main()"
