--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bin"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Takes time series data and calculates the average of each year.\n",
@@ -50,20 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "read_hd5"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Reads the flux (amounts), production (projection) and reserviour contents from \n",
@@ -86,20 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "run_solver"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Passed a solver function runs the solver and returns the speed and binned data\n",
@@ -116,20 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "select_gradient_solver"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
@@ -149,20 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "speed_vs_accuracy_plot"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "This function constructs a plot of the input data assuming that it has the fields created by the more generalised \n",
@@ -183,8 +128,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of taking +- $\\sigma$ you can manually set the tick of the error bars. Basically like a boxplot. I need to have better labels and units.\n",
+    "\n",
+    "Normailised terms are required."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +146,8 @@
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
     "\"\"\"\n",
     "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector, len::Integer)::DataFrame\n",
-    "    #! A major challenge is going to be getting the array to be the correct shape.\n",
+    "    #! Instead of using a matrix for data I could use a vector and then test the restults of \n",
+    "    #! @.median()\n",
     "    local data = Matrix{Float64}(undef, length(solvers), len);    # Creating the storage Matrix \n",
     "    local t_mean = Vector{Float64}(undef, length(solvers));     # For the mean of the times\n",
     "    local t_var = Vector{Float64}(undef, length(solvers));      # For the time varience \n",
@@ -226,55 +181,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function main()\n",
-    "    TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
+    "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
-    "    params = Vector{Float64}(undef, 6); # Storing the model params \n",
-    "    params[1] = 7.044873503263437;      # The mean position of the sinusoid \n",
-    "    params[2] = 0.18;                   # The modulation of the sinusoid w. r. t the mean\n",
-    "    params[3] = 11.0;                   # Setting period of the sinusoid \n",
-    "    params[4] = 1.25;                   # The phase shift of the sinusoid\n",
-    "    params[5] = 120.05769867244142;     # The height of the super gaussian \n",
-    "    params[6] = 12.0;                   # Width of the super-gaussian \n",
+    "params = Vector{Float64}(undef, 6); # Storing the model params \n",
+    "params[1] = 7.044873503263437;      # The mean position of the sinusoid \n",
+    "params[2] = 0.18;                   # The modulation of the sinusoid w. r. t the mean\n",
+    "params[3] = 11.0;                   # Setting period of the sinusoid \n",
+    "params[4] = 1.25;                   # The phase shift of the sinusoid\n",
+    "params[5] = 120.05769867244142;     # The height of the super gaussian \n",
+    "params[6] = 12.0;                   # Width of the super-gaussian \n",
     "\n",
-    "    production(t, params) = params[1] * (1 + params[2] * \n",
-    "        sin(2 * π / params[3] * t + params[4])) +           # Sinusoidal production \n",
-    "        params[5] * exp(- (params[6] * (t - 775)) ^ 16);    # Super Gaussian event\n",
-    "    derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative system \n",
+    "production(t, params) = params[1] * (1 + params[2] * \n",
+    "    sin(2 * π / params[3] * t + params[4])) +           # Sinusoidal production \n",
+    "    params[5] * exp(- (params[6] * (t - 775)) ^ 16);    # Super Gaussian event\n",
+    "derivative(x, params, t) = vec(TO * x + production(t, params) * P);  # The derivative system \n",
     "\n",
-    "    u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
+    "u0 = TO \\ (- params[1] * P);  # Equilibriating the system\n",
     "\n",
-    "    burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
-    "    burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
+    "burnproblem = ODEProblem(derivative, u0, (-360.0, 760.0), params);  # Burn in problem  \n",
+    "burnsolution = solve(burnproblem, reltol=1e-6).u[end];              # Running model \n",
     "\n",
-    "    solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
+    "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
     "\n",
-    "    #! so the hessian retruns a 6 by 6 array meaning that I get a dimension mismathch. \n",
-    "    # I need to somehow further generalise the profile function without breaking it on existing cases and without adding more argument passes. Perhaps a structure is what I need here. That way I can defined the shape of the arrays and whatnot be setting elements of the profile structure. This could work quite nicely actually.\n",
+    "#! so the hessian retruns a 6 by 6 array meaning that I get a dimension mismathch. \n",
+    "# I need to somehow further generalise the profile function without breaking it on existing cases and without adding more argument passes. Perhaps a structure is what I need here. That way I can defined the shape of the arrays and whatnot be setting elements of the profile structure. This could work quite nicely actually.\n",
+    "\n",
+    "# time_sample = Vector{Float64}(undef, 10);\n",
+    "# for i in 1:10\n",
+    "#     timer = time();\n",
+    "#     hessians = ForwardDiff.hessian(select_gradient_solver(BS3, derivative, burnsolution), params);\n",
+    "#     time_sample[i] = time() - timer;\n",
+    "# end\n",
+    "\n",
+    "# CSV.write(\"hessian_profiles.csv\", hessians);\n",
+    "# hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
+    "# draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
+    "\n",
+    "# fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "# solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "\n",
+    "# CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
+    "# CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
+    "\n",
+    "# fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
+    "# solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
+    "\n",
+    "# draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
+    "# draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
+    "\"\"\"\n",
+    "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector, len::Integer)::DataFrame\n",
+    "    #! Instead of using a matrix for data I could use a vector and then test the restults of \n",
+    "    #! @.median()\n",
+    "    local data = Vector{Any}(undef, length(solvers));       # Creating the storage Matrix \n",
+    "    local t_mean = Vector{Float64}(undef, length(solvers)); # For the mean of the times\n",
+    "    local t_var = Vector{Float64}(undef, length(solvers));  # For the time varience \n",
+    "    local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
+    "\n",
+    "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
+    "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
+    "        for i in 1:10\n",
+    "            local timer = time();                       # Starting a timer\n",
+    "            solution = f(solver, ∇, u0, parameters);    # Running the solver\n",
+    "            time_sample[i] = time() - timer;            # ending the timer \n",
+    "\n",
+    "            if i == 10                  # Storing final run\n",
+    "                data[index] = solution; # filling C14\n",
+    "            end\n",
+    "        end\n",
+    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
+    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
+    "    end \n",
+    "\n",
+    "    #! This is the problem so the implementation below will not work I need to somehow match indexes within indexes\n",
+    "    #? I could try use a dims call and a for loop to do this \n",
+    "    #? I kind of need the results to be a matrix for this to work without the length exploding to check the number of entries in size\n",
+    "    #! Cannot call array on a vector of matrixes to get a useful result. Making data a matrix with one dimesnion as one seems like the best approach for now.\n",
+    "    dimensions = size(data[1]); # Dimensions of each data subsidary\n",
+    "    for element in data\n",
+    "        for i in 1:dimensions[1]\n",
+    "            for j in 1:dimensions[2]\n",
+    "            end\n",
+    "        end\n",
     "    \n",
-    "    # hessians = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6);\n",
-    "    # CSV.write(\"hessian_profiles.csv\", hessians);\n",
-    "    # hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
-    "    # draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
     "\n",
-    "    fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "    solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "    data = (data' .- @.median(data)')';       # Calculating deviations from median \n",
+    "    data = @.abs(data);                             # Absolute deviations\n",
+    "    results.accuracy = vec(mean(data, dims=2));     # Mean deviation from the median \n",
+    "    results.accuracy_var = vec(var(data, dims=2));  # Calculating the RMSE error << is better \n",
+    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
+    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
     "    \n",
-    "    CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "    CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
-    "\n",
-    "    fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
-    "    solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
-    "\n",
-    "    draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
-    "    draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);\n",
-    "end\n",
-    "\n",
-    "main()"
+    "    return results\n",
+    "end"
    ]
   }
  ],
