Completion of experimental profile function

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bin"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Takes time series data and calculates the average of each year.\n",
@@ -39,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "read_hd5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Reads the flux (amounts), production (projection) and reserviour contents from \n",
@@ -64,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "run_solver"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Passed a solver function runs the solver and returns the speed and binned data\n",
@@ -83,9 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "select_gradient_solver"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Calculates the gradient using a χ² loss function. \n",
@@ -105,9 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "speed_vs_accuracy_plot"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This function constructs a plot of the input data assuming that it has the fields created by the more generalised \n",
@@ -222,7 +277,7 @@
     "# draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
     "\n",
     "# fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "# solvers = profile(solvers, run_solver, derivative, burnsolution, params, 31);\n",
+    "solvers = profile([BS3]], run_solver, derivative, burnsolution, params, 31);\n",
     "\n",
     "# CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
     "# CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
@@ -236,9 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "profile"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
@@ -266,20 +332,11 @@
     "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
     "    end \n",
     "\n",
-    "    #! This is the problem so the implementation below will not work I need to somehow match indexes within indexes\n",
-    "    #? I could try use a dims call and a for loop to do this \n",
-    "    #? I kind of need the results to be a matrix for this to work without the length exploding to check the number of entries in size\n",
-    "    #! Cannot call array on a vector of matrixes to get a useful result. Making data a matrix with one dimesnion as one seems like the best approach for now.\n",
-    "    dimensions = size(data[1]); # Dimensions of each data subsidary\n",
-    "    for element in data\n",
-    "        for i in 1:dimensions[1]\n",
-    "            for j in 1:dimensions[2]\n",
-    "            end\n",
-    "        end\n",
-    "    \n",
+    "    #? So this is looking very promising but I am not sure that it works yet\n",
+    "    data = cat(data..., dims=3);    # Using multidimensional matrixes to store the results\n",
+    "    meds = median(data, dims=3);    # Calculating the median along the third dimensions\n",
+    "    data = @.abs(data .- meds);     # Calculating the deviations #!IS this along the right dimension\n",
     "\n",
-    "    data = (data' .- @.median(data)')';       # Calculating deviations from median \n",
-    "    data = @.abs(data);                             # Absolute deviations\n",
     "    results.accuracy = vec(mean(data, dims=2));     # Mean deviation from the median \n",
     "    results.accuracy_var = vec(var(data, dims=2));  # Calculating the RMSE error << is better \n",
     "    results.time_mean = t_mean;                     # Storing the mean run time\n",
