--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5eb7110f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "bin"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "read_hd5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "run_solver"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,9 +236,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 3 and 31\")",
+     "output_type": "error",
+     "traceback": [
+      "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 3 and 31\")",
+      "",
+      "Stacktrace:",
+      "  [1] _bcs1",
+      "    @ ./broadcast.jl:501 [inlined]",
+      "  [2] _bcs(shape::Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}, newshape::Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}})",
+      "    @ Base.Broadcast ./broadcast.jl:495",
+      "  [3] broadcast_shape",
+      "    @ ./broadcast.jl:489 [inlined]",
+      "  [4] combine_axes",
+      "    @ ./broadcast.jl:484 [inlined]",
+      "  [5] _axes",
+      "    @ ./broadcast.jl:209 [inlined]",
+      "  [6] axes",
+      "    @ ./broadcast.jl:207 [inlined]",
+      "  [7] combine_axes",
+      "    @ ./broadcast.jl:485 [inlined]",
+      "  [8] instantiate",
+      "    @ ./broadcast.jl:266 [inlined]",
+      "  [9] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{3}, Nothing, typeof(abs), Tuple{Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{3}, Nothing, typeof(-), Tuple{PermutedDimsArray{Any, 3, (3, 2, 1), (3, 2, 1), Array{Any, 3}}, Array{Float64, 3}}}}})",
+      "    @ Base.Broadcast ./broadcast.jl:883",
+      " [10] profile(solvers::Vector{Type}, f::typeof(run_solver), ∇::Function, u0::Vector{Float64}, parameters::Vector{Float64})",
+      "    @ Main ./In[14]:29",
+      " [11] top-level scope",
+      "    @ In[15]:38",
+      " [12] eval",
+      "    @ ./boot.jl:360 [inlined]",
+      " [13] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "    @ Base ./loading.jl:1116"
+     ]
+    }
+   ],
    "source": [
     "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
@@ -277,7 +314,9 @@
     "# draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
     "\n",
     "# fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "solvers = profile([BS3]], run_solver, derivative, burnsolution, params, 31);\n",
+    "solvers = profile([BS3, Tsit5, DP5], run_solver, derivative, burnsolution, params);\n",
+    "\n",
+    "#* I think the process is complete now I need to test it with the others and implement the plot.\n",
     "\n",
     "# CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
     "# CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
@@ -291,31 +330,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "profile"
+       "31×1×1 Array{Float64, 3}:\n",
+       "[:, :, 1] =\n",
+       " 709.9903784248754\n",
+       " 710.561611623547\n",
+       " 710.7344690152225\n",
+       " 710.5555966699058\n",
+       " 710.063799134401\n",
+       " 709.4277958025474\n",
+       " 708.8354542743984\n",
+       " 708.4831380362316\n",
+       " 708.476409350554\n",
+       " 708.807369330522\n",
+       " 709.3963505462355\n",
+       " 710.0678139156195\n",
+       " 710.5572436264085\n",
+       "   ⋮\n",
+       " 716.5444710898129\n",
+       " 716.3013610174344\n",
+       " 716.3419936861244\n",
+       " 716.484476792228\n",
+       " 716.5439724656616\n",
+       " 716.3550966979514\n",
+       " 715.8603409109899\n",
+       " 715.109769559736\n",
+       " 714.2461245215875\n",
+       " 713.4604483958059\n",
+       " 712.9288462576691\n",
+       " 712.7743900346481"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solvers[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: f not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: f not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ ./In[16]:14",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
+     ]
     }
    ],
    "source": [
     "\"\"\"\n",
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
     "\"\"\"\n",
-    "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector, len::Integer)::DataFrame\n",
-    "    #! Instead of using a matrix for data I could use a vector and then test the restults of \n",
-    "    #! @.median()\n",
+    "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector)\n",
     "    local data = Vector{Any}(undef, length(solvers));       # Creating the storage Matrix \n",
     "    local t_mean = Vector{Float64}(undef, length(solvers)); # For the mean of the times\n",
     "    local t_var = Vector{Float64}(undef, length(solvers));  # For the time varience \n",
-    "    local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
+    "    # local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
     "\n",
     "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
     "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
@@ -333,14 +423,16 @@
     "    end \n",
     "\n",
     "    #? So this is looking very promising but I am not sure that it works yet\n",
-    "    data = cat(data..., dims=3);    # Using multidimensional matrixes to store the results\n",
-    "    meds = median(data, dims=3);    # Calculating the median along the third dimensions\n",
-    "    data = @.abs(data .- meds);     # Calculating the deviations #!IS this along the right dimension\n",
+    "    data = cat(data..., dims=3);                # Using multidimensional matrixes to store results\n",
+    "    meds = median(data, dims=3);                # Calculating the median along the third dimensions\n",
+    "    data = PermutedDimsArray(data, (3, 2, 1));  # Switching the dimensions for subtraction\n",
+    "    devs = @.abs(data .- meds);                 # Calculating the deviations\n",
+    "    devs = devs ./ data;                        # Normailised deviations,\n",
     "\n",
-    "    results.accuracy = vec(mean(data, dims=2));     # Mean deviation from the median \n",
-    "    results.accuracy_var = vec(var(data, dims=2));  # Calculating the RMSE error << is better \n",
+    "    results.accuracy = vec(mean(devs, dims=1));     # Mean deviation from the median \n",
+    "    results.accuracy_var = vec(var(devs, dims=1));  # Calculating the RMSE error  \n",
     "    results.time_mean = t_mean;                     # Storing the mean run time\n",
-    "    results.time_var = t_var;                       # Storing the varience of the time sample \n",
+    "    results.time_var = t_var;                       # Storing the varience of time sample \n",
     "    \n",
     "    return results\n",
     "end"
