--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -236,46 +236,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 3 and 31\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"arrays could not be broadcast to a common size; got a dimension with lengths 3 and 31\")",
-      "",
-      "Stacktrace:",
-      "  [1] _bcs1",
-      "    @ ./broadcast.jl:501 [inlined]",
-      "  [2] _bcs(shape::Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}, newshape::Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}})",
-      "    @ Base.Broadcast ./broadcast.jl:495",
-      "  [3] broadcast_shape",
-      "    @ ./broadcast.jl:489 [inlined]",
-      "  [4] combine_axes",
-      "    @ ./broadcast.jl:484 [inlined]",
-      "  [5] _axes",
-      "    @ ./broadcast.jl:209 [inlined]",
-      "  [6] axes",
-      "    @ ./broadcast.jl:207 [inlined]",
-      "  [7] combine_axes",
-      "    @ ./broadcast.jl:485 [inlined]",
-      "  [8] instantiate",
-      "    @ ./broadcast.jl:266 [inlined]",
-      "  [9] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{3}, Nothing, typeof(abs), Tuple{Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{3}, Nothing, typeof(-), Tuple{PermutedDimsArray{Any, 3, (3, 2, 1), (3, 2, 1), Array{Any, 3}}, Array{Float64, 3}}}}})",
-      "    @ Base.Broadcast ./broadcast.jl:883",
-      " [10] profile(solvers::Vector{Type}, f::typeof(run_solver), ∇::Function, u0::Vector{Float64}, parameters::Vector{Float64})",
-      "    @ Main ./In[14]:29",
-      " [11] top-level scope",
-      "    @ In[15]:38",
-      " [12] eval",
-      "    @ ./boot.jl:360 [inlined]",
-      " [13] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "    @ Base ./loading.jl:1116"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TO, P = read_hd5(\"Guttler14.hd5\");      # Reading the data into the scope \n",
     "\n",
@@ -313,8 +276,8 @@
     "# hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
     "# draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
     "\n",
-    "# fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "solvers = profile([BS3, Tsit5, DP5], run_solver, derivative, burnsolution, params);\n",
+    "fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
+    "solvers = profile(solvers, run_solver, derivative, burnsolution, params);\n",
     "\n",
     "#* I think the process is complete now I need to test it with the others and implement the plot.\n",
     "\n",
@@ -330,71 +293,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>3 rows × 5 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>solver</th><th>accuracy</th><th>accuracy_var</th><th>time_mean</th><th>time_var</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th></tr></thead><tbody><tr><th>1</th><td>BS3</td><td>2.6147e-5</td><td>1.04593e-9</td><td>0.00122311</td><td>1.05899e-7</td></tr><tr><th>2</th><td>Tsit5</td><td>3.62654e-5</td><td>6.11199e-9</td><td>0.00235457</td><td>2.31927e-7</td></tr><tr><th>3</th><td>DP5</td><td>1.66925e-5</td><td>1.06126e-9</td><td>0.00236803</td><td>1.2793e-8</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ccccc}\n",
+       "\t& solver & accuracy & accuracy\\_var & time\\_mean & time\\_var\\\\\n",
+       "\t\\hline\n",
+       "\t& String & Float64 & Float64 & Float64 & Float64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & BS3 & 2.6147e-5 & 1.04593e-9 & 0.00122311 & 1.05899e-7 \\\\\n",
+       "\t2 & Tsit5 & 3.62654e-5 & 6.11199e-9 & 0.00235457 & 2.31927e-7 \\\\\n",
+       "\t3 & DP5 & 1.66925e-5 & 1.06126e-9 & 0.00236803 & 1.2793e-8 \\\\\n",
+       "\\end{tabular}\n"
+      ],
       "text/plain": [
-       "31×1×1 Array{Float64, 3}:\n",
-       "[:, :, 1] =\n",
-       " 709.9903784248754\n",
-       " 710.561611623547\n",
-       " 710.7344690152225\n",
-       " 710.5555966699058\n",
-       " 710.063799134401\n",
-       " 709.4277958025474\n",
-       " 708.8354542743984\n",
-       " 708.4831380362316\n",
-       " 708.476409350554\n",
-       " 708.807369330522\n",
-       " 709.3963505462355\n",
-       " 710.0678139156195\n",
-       " 710.5572436264085\n",
-       "   ⋮\n",
-       " 716.5444710898129\n",
-       " 716.3013610174344\n",
-       " 716.3419936861244\n",
-       " 716.484476792228\n",
-       " 716.5439724656616\n",
-       " 716.3550966979514\n",
-       " 715.8603409109899\n",
-       " 715.109769559736\n",
-       " 714.2461245215875\n",
-       " 713.4604483958059\n",
-       " 712.9288462576691\n",
-       " 712.7743900346481"
+       "\u001b[1m3×5 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m solver \u001b[0m\u001b[1m accuracy   \u001b[0m\u001b[1m accuracy_var \u001b[0m\u001b[1m time_mean  \u001b[0m\u001b[1m time_var   \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m String \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64      \u001b[0m\u001b[90m Float64    \u001b[0m\u001b[90m Float64    \u001b[0m\n",
+       "─────┼──────────────────────────────────────────────────────────\n",
+       "   1 │ BS3     2.6147e-5     1.04593e-9  0.00122311  1.05899e-7\n",
+       "   2 │ Tsit5   3.62654e-5    6.11199e-9  0.00235457  2.31927e-7\n",
+       "   3 │ DP5     1.66925e-5    1.06126e-9  0.00236803  1.2793e-8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solvers[2]"
+    "solvers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: f not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: f not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ ./In[16]:14",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
+     "data": {
+      "text/plain": [
+       "profile"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -405,7 +355,7 @@
     "    local data = Vector{Any}(undef, length(solvers));       # Creating the storage Matrix \n",
     "    local t_mean = Vector{Float64}(undef, length(solvers)); # For the mean of the times\n",
     "    local t_var = Vector{Float64}(undef, length(solvers));  # For the time varience \n",
-    "    # local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
+    "    local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
     "\n",
     "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
     "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
@@ -422,10 +372,9 @@
     "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
     "    end \n",
     "\n",
-    "    #? So this is looking very promising but I am not sure that it works yet\n",
     "    data = cat(data..., dims=3);                # Using multidimensional matrixes to store results\n",
     "    meds = median(data, dims=3);                # Calculating the median along the third dimensions\n",
-    "    data = PermutedDimsArray(data, (3, 2, 1));  # Switching the dimensions for subtraction\n",
+    "    #* Need to confirm that this is along the correct dimesnion\n",
     "    devs = @.abs(data .- meds);                 # Calculating the deviations\n",
     "    devs = devs ./ data;                        # Normailised deviations,\n",
     "\n",
