Planning new advances in branch

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -148,41 +148,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "speed_vs_accuracy_plot"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "This function constructs a plot of the input data assuming that it has the fields created by the more generalised \n",
-    "\"\"\"\n",
-    "function speed_vs_accuracy_plot(filename::String)\n",
-    "    local r = DataFrame(CSV.File(filename));    # Reading data into the workspace\n",
-    "    local datavisual = Gadfly.plot(# Plot object for manipultation \n",
-    "        y=r.accuracy, x=r.time_mean, label=r.solver,    # Raw data \n",
-    "        Guide.ylabel(\"Accuracy\"), Guide.xlabel(\"Time\"), # X, Y Labels  \n",
-    "        # ymin=r.accuracy - r.accuracy_var,   # Y lower error bar\n",
-    "        # ymax=r.accuracy + r.accuracy_var,   # Y upper error bar\n",
-    "        xmin=r.time_mean - r.time_var,  # X lower error bar\n",
-    "        xmax=r.time_mean + r.time_var,  # X upper error bar\n",
-    "        Geom.xerrorbar, Geom.point, Geom.label, # Geometries \n",
-    "        Scale.x_log10, Scale.y_log10)  # Setting log scales \n",
-    "    return datavisual\n",
-    "end"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -275,15 +240,7 @@
     "\n",
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
     "\n",
-    "#! so the hessian retruns a 6 by 6 array meaning that I get a dimension mismathch. \n",
-    "# I need to somehow further generalise the profile function without breaking it on existing cases and without adding more argument passes. Perhaps a structure is what I need here. That way I can defined the shape of the arrays and whatnot be setting elements of the profile structure. This could work quite nicely actually.\n",
-    "\n",
-    "# time_sample = Vector{Float64}(undef, 10);\n",
-    "# for i in 1:10\n",
-    "#     timer = time();\n",
-    "#     hessians = ForwardDiff.hessian(select_gradient_solver(BS3, derivative, burnsolution), params);\n",
-    "#     time_sample[i] = time() - timer;\n",
-    "# end\n",
+    "# So I need to generalise the select_gradient_solver function so that it can do forward and backward and hessians. I also want to have a single CSV for the entire group with the box plot style implementation of the plot.\n",
     "\n",
     "# CSV.write(\"hessian_profiles.csv\", hessians);\n",
     "# hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
