More clearing of excess code

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -125,14 +125,14 @@
        "select_gradient_solver"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Calculates the gradient using a χ² loss function. \n",
+    "Calculates the gradient using a χ² loss function. ∇ is the gradient of the differential equations and u0 is the starting position. Parameters are the values of the parameters that the gradient is getting calculated for and f is the function i.e. gradient in forward or reverse or hessian.\n",
     "\"\"\"\n",
     "function select_gradient_solver(solver, ∇::Function, u0::Vector{Float64}, parameters)\n",
     "    function loss_function(params)  \n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,22 +242,8 @@
     "\n",
     "# So I need to generalise the select_gradient_solver function so that it can do forward and backward and hessians. I also want to have a single CSV for the entire group with the box plot style implementation of the plot.\n",
     "\n",
-    "# CSV.write(\"hessian_profiles.csv\", hessians);\n",
-    "# hessian_plot = speed_vs_accuracy_plot(\"hessian_profiles.csv\");\n",
-    "# draw(PDF(\"hessian.pdf\", 10cm, 10cm), hessian_plot);\n",
-    "\n",
-    "fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params, 6); \n",
-    "solvers = profile(solvers, run_solver, derivative, burnsolution, params);\n",
-    "\n",
-    "\n",
-    "# CSV.write(\"gradient_profiles.csv\", fgrads); # Writing the data to a CSV\n",
-    "# CSV.write(\"solver_profiles.csv\", solvers);  # Writing solver profile to CSV\n",
-    "\n",
-    "# fgrad_plot = speed_vs_accuracy_plot(\"gradient_profiles.csv\");   # Plot objects \n",
-    "# solver_plot = speed_vs_accuracy_plot(\"solver_profiles.csv\");    # Plot object\n",
-    "\n",
-    "# draw(PDF(\"forwards_mode_gradient.pdf\", 10cm, 10cm), fgrad_plot);\n",
-    "# draw(PDF(\"solver.pdf\", 10cm, 10cm), solver_plot);"
+    "fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params); \n",
+    "solvers = profile(solvers, run_solver, derivative, burnsolution, params);"
    ]
   }
  ],
