Moving the solution into a new realm

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -115,39 +115,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "select_gradient_solver"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Calculates the gradient using a χ² loss function. ∇ is the gradient of the differential equations and u0 is the starting position. Parameters are the values of the parameters that the gradient is getting calculated for and f is the function i.e. gradient in forward or reverse or hessian.\n",
-    "\"\"\"\n",
-    "function select_gradient_solver(solver, ∇::Function, u0::Vector{Float64}, parameters)\n",
-    "    function loss_function(params)  \n",
-    "        local solution = run_solver(solver, ∇, u0, params); #! Naming\n",
-    "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
-    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
-    "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
-    "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
-    "        return -0.5 * χ²\n",
-    "    end\n",
-    "    return ForwardDiff.gradient(loss_function, parameters);\n",
-    "end\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -158,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +134,7 @@
        "profile"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +143,7 @@
     "\"\"\"\n",
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
     "\"\"\"\n",
-    "function profile(solvers::Vector, f::Function, ∇::Function, u0::Vector{Float64}, parameters::Vector)\n",
+    "function profile(solvers::Vector, f::Function, args::Vector)\n",
     "    local data = Vector{Any}(undef, length(solvers));       # Creating the storage Matrix \n",
     "    local t_mean = Vector{Float64}(undef, length(solvers)); # For the mean of the times\n",
     "    local t_var = Vector{Float64}(undef, length(solvers));  # For the time varience \n",
@@ -186,7 +153,7 @@
     "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
     "        for i in 1:10\n",
     "            local timer = time();                       # Starting a timer\n",
-    "            solution = f(solver, ∇, u0, parameters);    # Running the solver\n",
+    "            solution = f(solver, args...);    # Running the solver\n",
     "            time_sample[i] = time() - timer;            # ending the timer \n",
     "\n",
     "            if i == 10                  # Storing final run\n",
@@ -200,21 +167,56 @@
     "    data = cat(data..., dims=3);                # Using multidimensional matrixes to store results\n",
     "    meds = median(data, dims=3);                # Calculating the median along the third dimensions\n",
     "    #* Need to confirm that this is along the correct dimesnion\n",
+    "    #! So this is failing for the hessians\n",
     "    devs = @.abs(data .- meds);                 # Calculating the deviations\n",
     "    devs = devs ./ data;                        # Normailised deviations,\n",
     "\n",
-    "    results.accuracy = vec(mean(devs, dims=1));     # Mean deviation from the median \n",
-    "    results.accuracy_var = vec(var(devs, dims=1));  # Calculating the RMSE error  \n",
-    "    results.time_mean = t_mean;                     # Storing the mean run time\n",
-    "    results.time_var = t_var;                       # Storing the varience of time sample \n",
+    "    accuracy = vec(mean(devs, dims=1));     # Mean deviation from the median \n",
+    "    # results.accuracy_var = vec(var(devs, dims=1));  # Calculating the RMSE error  \n",
+    "    # results.time_mean = t_mean;                     # Storing the mean run time\n",
+    "    # results.time_var = t_var;                       # Storing the varience of time sample \n",
     "    \n",
-    "    return results\n",
+    "    return accuracy\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "select_autodiff"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\"\"\"\n",
+    "Calculates the gradient using a χ² loss function. ∇ is the gradient of the differential equations and u0 is the starting position. Parameters are the values of the parameters that the gradient is getting calculated for and f is the function i.e. gradient in forward or reverse or hessian. This means that f tkes two arguments. Man this is sought of shit programing,\n",
+    "\"\"\"\n",
+    "function select_autodiff(solver, ∇::Function, u0::Vector{Float64}, parameters, f::Function)\n",
+    "    function loss_function(params)  \n",
+    "        local solution = run_solver(solver, ∇, u0, params); #! Naming\n",
+    "        local ΔC14 = (solution .- u0[2]) ./ u0[2] .* 1000;  # Calculating ΔC14\n",
+    "        local miyake = DataFrame(CSV.File(\"Miyake12.csv\")); # Reading Miyake data\n",
+    "        local ΔC14 .+= mean(miyake.d14c[1:4]);  # Calculates the ticktack offset\n",
+    "        local χ² = sum(((miyake.d14c .- ΔC14[1:28]) ./ miyake.sig_d14c) .^ 2);  # Calculating χ² \n",
+    "        return -0.5 * χ²\n",
+    "    end\n",
+    "    return f(loss_function, parameters);\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,10 +242,18 @@
     "\n",
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
     "\n",
-    "# So I need to generalise the select_gradient_solver function so that it can do forward and backward and hessians. I also want to have a single CSV for the entire group with the box plot style implementation of the plot.\n",
-    "\n",
-    "fgrads = profile(solvers, select_gradient_solver, derivative, burnsolution, params); \n",
-    "solvers = profile(solvers, run_solver, derivative, burnsolution, params);"
+    "fgrads = profile(solvers, select_autodiff,\n",
+    "    [derivative, burnsolution, params, ForwardDiff.gradient]); # Running the forward mode \n",
+    "hessians = profile(solvers, select_autodiff,\n",
+    "    [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
+    "solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So I need to get the normalised working. I might also pay to change how the results are returned from the profile function. Perhaps if I just return the information that is always the same. This would be the vector of outputs and the time results then I should be able to do each manipulation separately. Yes I like this."
    ]
   }
  ],
