Time analysis for forward mode gradients

--- a/profiler.ipynb
+++ b/profiler.ipynb
@@ -115,17 +115,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instead of taking +- $\\sigma$ you can manually set the tick of the error bars. Basically like a boxplot. I need to have better labels and units.\n",
-    "\n",
-    "Normailised terms are required."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +125,7 @@
        "profile"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,10 +135,8 @@
     "So this is highly experimental basically I am passing a function into the profile function, which takes only solver as an argument. This done using the wrapper method that I used earlier\n",
     "\"\"\"\n",
     "function profile(solvers::Vector, f::Function, args::Vector)\n",
-    "    local data = Vector{Any}(undef, length(solvers));       # Creating the storage Matrix \n",
-    "    local t_mean = Vector{Float64}(undef, length(solvers)); # For the mean of the times\n",
-    "    local t_var = Vector{Float64}(undef, length(solvers));  # For the time varience \n",
-    "    local results = DataFrame(solver = @.string(solvers));  # DataFrame of summary Statistics\n",
+    "    local data = Vector{Any}(undef, length(solvers));     # Creating the storage Matrix \n",
+    "    local times = Vector{Any}(undef, length(solvers)); # For the mean of the times\n",
     "\n",
     "    for (index, solver) in enumerate(solvers)           # Looping over the solvers \n",
     "        local time_sample = Vector{Float64}(undef, 10); # The different run times of each trial \n",
@@ -160,29 +149,15 @@
     "                data[index] = solution; # filling C14\n",
     "            end\n",
     "        end\n",
-    "        t_mean[index] = mean(time_sample[2:end]);   # Storing run time ignoring compile run.\n",
-    "        t_var[index] = var(time_sample[2:end]);     # Storing time error\n",
+    "        times[index] = time_sample;   # Storing run time ignoring compile run.\n",
     "    end \n",
-    "\n",
-    "    data = cat(data..., dims=3);                # Using multidimensional matrixes to store results\n",
-    "    meds = median(data, dims=3);                # Calculating the median along the third dimensions\n",
-    "    #* Need to confirm that this is along the correct dimesnion\n",
-    "    #! So this is failing for the hessians\n",
-    "    devs = @.abs(data .- meds);                 # Calculating the deviations\n",
-    "    devs = devs ./ data;                        # Normailised deviations,\n",
-    "\n",
-    "    accuracy = vec(mean(devs, dims=1));     # Mean deviation from the median \n",
-    "    # results.accuracy_var = vec(var(devs, dims=1));  # Calculating the RMSE error  \n",
-    "    # results.time_mean = t_mean;                     # Storing the mean run time\n",
-    "    # results.time_var = t_var;                       # Storing the varience of time sample \n",
-    "    \n",
-    "    return accuracy\n",
+    "    return times, data\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +166,7 @@
        "select_autodiff"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,18 +217,62 @@
     "\n",
     "solvers = [TRBDF2, BS3, Tsit5, Rosenbrock23, ROS34PW1a, QNDF1, ABDF2, ExplicitRK, DP5, TanYam7, Vern6]\n",
     "\n",
-    "fgrads = profile(solvers, select_autodiff,\n",
-    "    [derivative, burnsolution, params, ForwardDiff.gradient]); # Running the forward mode \n",
-    "hessians = profile(solvers, select_autodiff,\n",
-    "    [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
-    "solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
+    "f_grad_times, f_grad_data = profile(solvers, select_autodiff,\n",
+    "    [derivative, burnsolution, params, ForwardDiff.gradient]);  # Running the forward mode \n",
+    "# hessians = profile(solvers, select_autodiff,\n",
+    "#     [derivative, burnsolution, params, ForwardDiff.hessian]);   # Running the hessians \n",
+    "# solvers = profile(solvers, run_solver, [derivative, burnsolution, params]); # Running the solvers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×11 Matrix{Float64}:\n",
+       " 0.0197032  0.00491757  0.00951547  …  0.00624635  0.0111264  0.00867314"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tests = hcat(f_grad_times...);  # Concatenating into an array for manipulation\n",
+    "tests = tests[2:end, 1:end];    # Removing the compile runs\n",
+    "fmean = mean(tests, dims=1);    # Calculating the solver averages\n",
+    "fvars = var(tests, dims=1);     # Calculating the solver variances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = hcat(f_grad_data...);    # So these are extremely different\n",
+    "fmean = median(data, dims=2);   # Getting the average value of each parameter gradient\n",
+    "data = data .- fmean;           # Calculating the deviations from the median\n",
+    "\n",
+    "\n",
+    "#? So I need to normalise the data in this setting. I need to take the mean of the normalised deviations and the variances of the normalised deviations\n",
+    "\n",
+    "# fmean = mean(data, dims=1);     # Caclulating the means of the solvers\n",
+    "# fvars = var(data, dims=1);      # Caclulating the variances of the solvers \n",
+    "# fmean"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So I need to get the normalised working. I might also pay to change how the results are returned from the profile function. Perhaps if I just return the information that is always the same. This would be the vector of outputs and the time results then I should be able to do each manipulation separately. Yes I like this."
+    "So I need to get the normalised working. I might also pay to change how the results are returned from the profile function. Perhaps if I just return the information that is always the same. This would be the vector of outputs and the time results then I should be able to do each manipulation separately. Yes I like this.\n",
+    "\n",
+    "So this is from tomorrow onward. I also need the boxplot like thing."
    ]
   }
  ],
